// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationDetails component should be rendered correctly provided app 1`] = `
<div
  className="sto-app"
>
  <div
    className="sto-app-icon"
  >
    <img
      alt="collect-icon"
      className="sto-app-item-icon"
      src="<svg></svg>"
    />
  </div>
  <div
    className="sto-app-content"
  >
    <h2>
      cozy Collect
    </h2>
    <p>
      The konnectors manager for Cozy V3
    </p>
    <button
      className="coz-btn coz-btn--regular"
      onClick={[Function]}
      role="button"
    >
      <Icon
        height="10px"
        icon="openwith"
        width="10px"
      />
       
      Open
    </button>
    <Link
      className="coz-btn coz-btn--danger-outline"
      replace={false}
      to="//myapps/collect/manage"
    >
      Uninstall this application
    </Link>
  </div>
</div>
`;

exports[`ApplicationDetails component should be rendered correctly provided app with broken icon and no editor 1`] = `
<div
  className="sto-app"
>
  <div
    className="sto-app-icon"
  >
    <svg
      className="sto-app-item-icon--default blurry"
    >
      <use
        xlinkHref="#undefined"
      />
    </svg>
  </div>
  <div
    className="sto-app-content"
  >
    <h2>
      Collect
    </h2>
    <p>
      The konnectors manager for Cozy V3
    </p>
    <button
      className="coz-btn coz-btn--regular"
      onClick={[Function]}
      role="button"
    >
      <Icon
        height="10px"
        icon="openwith"
        width="10px"
      />
       
      Open
    </button>
    <Link
      className="coz-btn coz-btn--danger-outline"
      replace={false}
      to="//myapps/collect/manage"
    >
      Uninstall this application
    </Link>
  </div>
</div>
`;
